gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.11.11-not-enough-arguments-for-placeholders.sarif
{
  "version": "2.1.0",
  "runs": [{
    "tool": { "driver": { "name": "example" } },
    "results": [
      { "message": { "text" : "the {0} {1} fox jumps over the {2} dog", "arguments": ["quick", "brown"] } } /* { dg-error "not enough strings in 'arguments' array for placeholder '\\{2\\}' \\\[SARIF v2.1.0 ยง3.11.11\\\]" } */
    ]
  }]
}

/* { dg-begin-multiline-output "" }
In JSON object '/runs/0/results/0/message':
   { dg-end-multiline-output "" } */
/* { dg-begin-multiline-output "" }
    6 |       { "message": { "text" : "the {0} {1} fox jumps over the {2} dog", "arguments": ["quick", "brown"] } }
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   { dg-end-multiline-output "" }  */
